@@ -23,64 +23,55 @@ public:
     ACE_THROW_SPEC((CORBA::SystemException)) { return 0; }
 
   virtual DDS::DataReader_ptr create_datareader(
-    DDS::TopicDescription_ptr a_topic_desc,
-    const DDS::DataReaderQos& qos,
-    DDS::DataReaderListener_ptr a_listener,
-    DDS::StatusMask mask)
+    DDS::TopicDescription_ptr /* a_topic_desc */,
+    const DDS::DataReaderQos& /* qos */,
+    DDS::DataReaderListener_ptr /* a_listener */,
+    DDS::StatusMask /* mask */)
     ACE_THROW_SPEC((CORBA::SystemException)) { return 0; }
 
   virtual DDS::DataReader_ptr create_opendds_datareader(
-    DDS::TopicDescription_ptr a_topic_desc,
-    const DDS::DataReaderQos& qos,
-    const OpenDDS::DCPS::DataReaderQosExt& ext_qos,
-    DDS::DataReaderListener_ptr a_listener,
-    DDS::StatusMask mask)
+    DDS::TopicDescription_ptr /* a_topic_desc */,
+    const DDS::DataReaderQos& /* qos */,
+    const OpenDDS::DCPS::DataReaderQosExt& /* ext_qos */,
+    DDS::DataReaderListener_ptr /* a_listener */,
+    DDS::StatusMask /* mask */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return 0; }
 
   virtual DDS::ReturnCode_t delete_datareader(
-    DDS::DataReader_ptr a_datareader)
+    DDS::DataReader_ptr /* a_datareader */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t delete_contained_entities()
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::DataReader_ptr lookup_datareader(
-    const char* topic_name)
+    const char* /* topic_name */)
     ACE_THROW_SPEC((CORBA::SystemException))
   {
-/*    if (ACE_OS::strcmp(OpenDDS::DCPS::BUILT_IN_SUBSCRIPTION_TOPIC, topic_name) == 0)
-      {
-        return DDS::DataReader::_duplicate(&subBIT_);
-      }
-    else if (ACE_OS::strcmp(OpenDDS::DCPS::BUILT_IN_PUBLICATION_TOPIC, topic_name) == 0)
-      {
-        return DDS::DataReader::_duplicate(&pubBIT_);
-      }
-*/
     return 0;
   }
 
   virtual DDS::ReturnCode_t get_datareaders(
-    DDS::DataReaderSeq& readers,
-    DDS::SampleStateMask sample_states,
-    DDS::ViewStateMask view_states,
-    DDS::InstanceStateMask instance_states)
+    DDS::DataReaderSeq& /* readers */,
+    DDS::SampleStateMask /* sample_states */,
+    DDS::ViewStateMask /* view_states */,
+    DDS::InstanceStateMask /* instance_states */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t notify_datareaders()
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t set_qos(
-    const DDS::SubscriberQos& qos)
+    const DDS::SubscriberQos& /* qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t get_qos(
-    DDS::SubscriberQos& qos)
+    DDS::SubscriberQos& /* qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t set_listener(
-    DDS::SubscriberListener_ptr a_listener,
-    DDS::StatusMask mask)
+    DDS::SubscriberListener_ptr /* a_listener */,
+    DDS::StatusMask /* mask */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::SubscriberListener_ptr get_listener()
@@ -96,20 +87,20 @@ public:
   ACE_THROW_SPEC((CORBA::SystemException)) { return 0; }
 
   virtual DDS::ReturnCode_t set_default_datareader_qos(
-    const DDS::DataReaderQos& qos)
+    const DDS::DataReaderQos& /* qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t get_default_datareader_qos(
-    DDS::DataReaderQos& qos)
+    DDS::DataReaderQos& /* qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual void get_default_datareader_qos_ext(
-    OpenDDS::DCPS::DataReaderQosExt& qos)
+    OpenDDS::DCPS::DataReaderQosExt& /* qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { }
 
   virtual DDS::ReturnCode_t copy_from_topic_qos(
-    DDS::DataReaderQos& a_datareader_qos,
-    const DDS::TopicQos& a_topic_qos)
+    DDS::DataReaderQos& /* a_datareader_qos */,
+    const DDS::TopicQos& /* a_topic_qos */)
   ACE_THROW_SPEC((CORBA::SystemException)) { return ::DDS::RETCODE_OK; }
 
   virtual DDS::ReturnCode_t enable()
@@ -121,8 +112,6 @@ public:
   virtual DDS::StatusMask get_status_changes()
     ACE_THROW_SPEC((CORBA::SystemException)) { return 0; }
 
-/*  DDS::SubscriptionBuiltinTopicDataDataReaderImpl subBIT_;
-  DDS::PublicationBuiltinTopicDataDataReaderImpl pubBIT_;*/
 };
 
 
